--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     ext.kotlin_annotations_version = '1.0.0'
     ext.rxjava_version = '2.1.1'
     ext.rxandroid_version = '2.0.1'
+    ext.dagger_version = "2.11"
+    ext.crashlytics_version = "2.9.1"
 
     ext.arch_version = "1.0.0"
     ext.support_version = "27.0.2"
